# quorum-gatherer

./: .gitignore  LICENSE  Makefile  README.md  data.json  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  release.yml  version-bump.yml
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/agent_prompts/: _README.md  analyst.agent.md  chairman.agent.md  customer_advocate.agent.md  executor.agent.md  first_principles.agent.md
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/agents/: loader.py  orchestrator.py  provider.py  runner.py  synthesis.py  validation.py
backend/app/api/: agents.py  chats.py  deps.py  settings.py  ws.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  chat.py  enums.py  report.py  run.py  user.py
backend/app/schemas/: agent_outputs.py  api.py
backend/app/services/: settings_service.py  users.py
backend/tests/: conftest.py  test_agents_db.py  test_loader.py  test_pipeline.py  test_render.py  test_settings.py  test_two_phase.py
desktop/: pyproject.toml  run.py
desktop/quorum_desktop/: __init__.py  app.py  bridge.py  engine.py  paths.py  theme.py  updater.py
desktop/quorum_desktop/widgets/: agent_chat_dialog.py  agent_edit_dialog.py  agent_panel.py  agents_page.py  chairman_report.py  composer.py  markdown_view.py  providers_page.py  report_dialog.py  settings_dialog.py  transaction_dialog.py  updates_page.py
desktop/quorum_desktop/windows/: main_window.py
desktop/release/: entitlements.plist  installer.iss  quorum_desktop.spec  windows_version_info.txt
desktop/release/tuf/: repo_tool.py
desktop/tests/: conftest.py  test_bridge.py  test_dialogs.py  test_engine.py  test_main_window.py  test_pages.py  test_paths.py  test_updater.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AgentPanel.tsx  ChairmanReport.tsx  Composer.tsx  SettingsDialog.tsx
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1677177e7c7589af_main_window_py.html  z_22219c0dfdaf9392_agent_chat_dialog_py.html  z_22219c0dfdaf9392_agent_edit_dialog_py.html  z_22219c0dfdaf9392_agent_panel_py.html  z_22219c0dfdaf9392_agents_page_py.html  z_22219c0dfdaf9392_chairman_report_py.html  z_22219c0dfdaf9392_composer_py.html  z_22219c0dfdaf9392_markdown_view_py.html  z_22219c0dfdaf9392_providers_page_py.html  z_22219c0dfdaf9392_report_dialog_py.html  z_22219c0dfdaf9392_settings_dialog_py.html  z_22219c0dfdaf9392_transaction_dialog_py.html  z_22219c0dfdaf9392_updates_page_py.html  z_442412e0697a7ae6___init___py.html  z_442412e0697a7ae6_agent_config_py.html  z_442412e0697a7ae6_base_py.html  z_442412e0697a7ae6_chat_py.html  z_442412e0697a7ae6_enums_py.html  z_442412e0697a7ae6_report_py.html  z_442412e0697a7ae6_run_py.html  z_442412e0697a7ae6_user_py.html  z_4487a10e26970aa0___init___py.html  z_4487a10e26970aa0_migrate_py.html  z_4e2934df678feba3_agents_service_py.html  z_4e2934df678feba3_settings_service_py.html  z_4e2934df678feba3_users_py.html  z_737b114548ad986f_agent_outputs_py.html  z_ab3cd481c1f0a5fa_config_py.html  z_ab3cd481c1f0a5fa_db_py.html  z_ab3cd481c1f0a5fa_events_py.html  z_ab3cd481c1f0a5fa_security_py.html  z_b2177b27918a49d1_api_py.html  z_cd756cf0ef5e98d0_agents_py.html  z_cd756cf0ef5e98d0_chats_py.html  z_cd756cf0ef5e98d0_deps_py.html  z_cd756cf0ef5e98d0_settings_py.html  (+18 more)
quorum_core/: alembic.ini  pyproject.toml
quorum_core/quorum_core/: __init__.py  migrate.py
quorum_core/quorum_core/agent_prompts/: _charter.md  contrarian.agent.md  expansionist.agent.md  investor.agent.md  outsider.agent.md
quorum_core/quorum_core/agents/: catalog.py  definition.py  loader.py  orchestrator.py  provider.py  runner.py  seed.py  synthesis.py  validation.py
quorum_core/quorum_core/core/: config.py  db.py  events.py  security.py
quorum_core/quorum_core/migrations/: env.py
quorum_core/quorum_core/migrations/versions/: b1f2a3c4d5e6_add_reasoning_to_provider_settings.py  c2a3b4d5e6f7_add_chairman_model_to_provider_settings.py  c93d15e6f617_initial_schema.py  d3b4c5e6f7a8_add_message_history_to_agent_runs.py  e4c5d6f7a8b9_add_agent_configs_and_active_agents.py
quorum_core/quorum_core/models/: __init__.py  agent_config.py  base.py  chat.py  enums.py  report.py  run.py  user.py
quorum_core/quorum_core/services/: agents_service.py  settings_service.py  users.py
quorum_core/tests/: test_coverage_gaps.py  test_loader.py  test_reasoning.py  test_render.py
scripts/: bump_version.py
