# uv workspace root for the quorum-gatherer monorepo.
# Members share one virtualenv; quorum_core is the shared library both apps depend on.
[project]
name = "quorum-gatherer"
version = "0.1.4"
requires-python = ">=3.14,<3.15"

[tool.uv]
package = false
default-groups = ["dev"]

[tool.uv.workspace]
members = ["quorum_core", "backend", "desktop"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "bandit>=1.8",
    "pyinstaller>=6.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["quorum_core/tests", "backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/File) in argument defaults

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]
# Many runtime deps (PySide6, qasync, pydantic-ai, alembic, ...) ship no type stubs;
# don't fail on their missing-stub noise — we gate on type errors in our own code.
ignore_missing_imports = true

[tool.bandit]
# Recurse the source packages; exclude tests (asserts there are expected) and any
# local build artifacts. CI passes the targets explicitly too.
exclude_dirs = ["tests", "build", "dist"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
