[project]
name = "quorum-gatherer-backend"
version = "0.1.0"
description = "Product Strategy Council — multi-agent deliberation backend (FastAPI + pydantic-ai)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pydantic-ai>=2.0",
    # Provider SDKs so anthropic/openai/google ship by default and groq/mistral/cohere
    # are selectable from the UI. (openai, anthropic, google-genai come with pydantic-ai.)
    "groq>=0.11",
    "mistralai>=1.2",
    "cohere>=5.13",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "cryptography>=43",
    "pyyaml>=6.0",
    "python-multipart>=0.0.12",
]

# Dev tooling as a dependency-group (PEP 735). `default-groups` below makes uv include
# it on every `uv sync` / `uv run`, so lint/test work without an --extra/--group flag.
[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/File) in argument defaults

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
