[project]
name = "quorum-gatherer-backend"
version = "0.1.2"
description = "Product Strategy Council — FastAPI web shell over quorum_core."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "quorum-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
]

[tool.uv.sources]
quorum-core = { workspace = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
