[project]
name = "quorum-desktop"
version = "0.1.7"
description = "Native desktop thick-client for quorum-gatherer (PySide6)."
requires-python = ">=3.14,<3.15"
dependencies = [
    "quorum-core",
    "PySide6>=6.8",
    "qasync>=0.27",
    "platformdirs>=4.0",
    "tufup>=0.10.0",
]

[tool.uv.sources]
quorum-core = { workspace = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["quorum_desktop*"]
